feat(settings): 重构AI提供商配置与安全存储
- 将AI提供商ID字符串类型改为枚举类型AIProviderType，提升类型安全性
- 优化提供商配置列表管理，使用Set替代List避免重复配置
- 更新配置文件存储路径，使用更规范的命名空间
- 测试失败时从可用列表中删除提供商